SONAR-18856 Refactor subportfolios and fix build and tests